--- a/index.html
+++ b/index.html
@@ -1,68 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8" />
-    <title>01_LineGrid</title>  <!-- Keep it short: title appears on browser tab-->
-		<!-- OPTIONAL: let's surround canvas with a thin blue outline -->
-		<style type =" text/ css"> canvas {border: 2px dotted blue;} </style>
-  </head>
+    <title>Proj B</title> <!-- Keep it short: title appears on browser tab-->
+</head>
 
-	<!--	Create the HTML5 'canvas' element in which we will run WebGL
-	-->
-  <body onload="main()" onresize="onBrowserResize()">
+<body onload="main()" onresize="onBrowserResize()">
     <canvas id="webgl" width="800" height="500">
-    Please use a browser that supports "canvas"
+        Please use a browser that supports "canvas"
     </canvas>
-	<br> 
-	    <b>Ray Tracer: Press 't' to Trace!</b> (left: WebGL Scene Preview. Right: Ray-Traced Result.)
-	<br>
-	    <button type="button" onclick="onSuperSampleButton()" >Super-Sampling</button>
-	    <button type="button" onclick="onJitterButton()"      >Jitter</button>
-      <!-- onSuperSampleButton() and onJitterButton() 
-           modifies this span object's contents: -->
-	    <span id='AAreport'> 1 sample/pixel. No jitter. </span> 
-      	<br>
-	    <button type="button" onclick="onSceneButton()" >Change Scene</button>
-			<!-- onSceneButton() modifies this span object's contents: -->
-	    <span id='SceneReport'> Show Scene Number 0 </span> 
+    <br>
+    <b>Ray Tracer: Press 't' to Trace!</b> (left: WebGL Scene Preview. Right: Ray-Traced Result.)
+    <br>
+    <button type="button" onclick="onSuperSampleButton()">Super-Sampling</button>
+    <button type="button" onclick="onJitterButton()">Jitter</button>
+    <span id='AAreport'> 1 sample/pixel. No jitter. </span>
+    <br>
+    <button type="button" onclick="onSceneButton()">Change Scene</button>
+    <span id='SceneReport'> Show Scene Number 0 </span>
 
-	<br>
-	    Mouse Drag: Aims the camera (turns left,right,up,down)
-	<br>
-	    W/S; A/D keys: move camera forward/backwards; strafe left/right.
-	<br>
-<hr> <!-- Draw a horizontal-line separator------------------------------------------------------------->
-	Open Console, please: (right-click-->'Inspect Element'-->'Console' tab)
-	<br>
-	Try keyboard & mouse click/drag inside the canvas, and:
-		<br>
-	<!-- Make 'div' elements to hold changeable HTML made in our JavaScript file;
-		 (where? GUIbox-Lib.js, in keyboard & mouse fcns)
-	-->
-	<p>
-		<div id='KeyDown'> KeyDown...</div>
-		<div id='KeyMod'> KeyMod...<br><br><br> </div>
-		<div id='MouseResult0'> MouseResult0... </div> 
-		<div id='MouseDragResult'> MouseDragResult... </div>
-		<div id='MouseCanvas'> MouseCanvas... </div>
-  </p>
-	<!--	Load in the JavaScript libraries supplied by our textbook 
-			(Matsuda et al., 2013 WebGL Programming Guide) that help us
-			with WebGL programming:
-	-->
+    <br>
+    Mouse Drag: Aims the camera (turns left,right,up,down)
+    <br>
+    W/S; A/D keys: move camera forward/backwards; strafe left/right.
+    <br>
+    <hr>
+    Open Console, please: (right-click-->'Inspect Element'-->'Console' tab)
+    <br>
+    Try keyboard & mouse click/drag inside the canvas, and:
+    <br>
+
+    <p>
+        <div id='MouseResult0'> MouseResult0... </div>
+        <div id='MouseDragResult'> MouseDragResult... </div>
+        <div id='MouseCanvas'> MouseCanvas... </div>
+    </p>
+
+    <script src="lib/glMatrix.js"></script>
     <script src="lib/webgl-utils.js"></script>
     <script src="lib/webgl-debug.js"></script>
     <script src="lib/cuon-utils.js"></script>
-<!-- REMOVED!!		<script src="../lib/cuon-matrix-quat03.js"></script>  -->
-<!-- Instead, we UPGRADED to Brandon Jones' far-faster, 
-      far more complete vector/matrix/quaternion library: 
- 			SEE: http://glmatrix.net/ fast vector/matrix lib for webGL  -->
-    <script src="lib/glMatrix.js"></script> 
 
-		<!-- finally, our own code: -->
-		<script src="src/JT_GUIbox-Lib.js"></script>
-		<script src="src/JT_VBObox-Lib.js"></script>
-		<script src="src/Week01_traceSupplement.js"></script>
-    <script src="src/Week01_LineGrid.js"></script>
-  </body>
+    <!-- <script src="src/JT_VBObox-Lib.js"></script> -->
+    <!-- <script src="src/Week01_traceSupplement.js"></script> -->
+
+    <script src="src/htmlcallBacks.js" type="text/javascript"></script>
+    <script src="src/main.js" type="text/javascript"></script>
+
+</body>
+
 </html>
