--- a/index.html
+++ b/index.html
@@ -32,19 +32,22 @@
     <br>
 
     <p>
+        <div id='KeyDown'> KeyDown...</div>
+		<div id='KeyMod'> KeyMod...<br><br><br> </div>
         <div id='MouseResult0'> MouseResult0... </div>
         <div id='MouseDragResult'> MouseDragResult... </div>
         <div id='MouseCanvas'> MouseCanvas... </div>
     </p>
 
-    <script src="lib/glMatrix.js"></script>
+    <script src="lib/glmatrix.js"></script>
     <script src="lib/webgl-utils.js"></script>
     <script src="lib/webgl-debug.js"></script>
     <script src="lib/cuon-utils.js"></script>
 
-    <!-- <script src="src/JT_VBObox-Lib.js"></script> -->
-    <!-- <script src="src/Week01_traceSupplement.js"></script> -->
-
+    <script src="src/traceSupplement.js"></script>
+    <script src="src/initVBOwithRayTracing.js" type="text/javascript"></script>
+    <script src="src/initVBOwithShaders.js" type="text/javascript"></script>
+    <script src="src/VBOinfo.js" type="text/javascript"></script>
     <script src="src/htmlcallBacks.js" type="text/javascript"></script>
     <script src="src/main.js" type="text/javascript"></script>
 
