--- a/index.html
+++ b/index.html
@@ -44,11 +44,15 @@
     <script src="lib/webgl-debug.js"></script>
     <script src="lib/cuon-utils.js"></script>
 
-    <script src="src/traceSupplement.js"></script>
-    <script src="src/initVBOwithRayTracing.js" type="text/javascript"></script>
-    <script src="src/initVBOwithShaders.js" type="text/javascript"></script>
+    <script src="src/CCamera.js" type="text/javascript"></script>
+    <script src="src/CGeom.js" type="text/javascript"></script>
+    <script src="src/CImgBuf.js" type="text/javascript"></script>
+    <script src="src/CRay.js" type="text/javascript"></script>
+    <script src="src/CScene.js" type="text/javascript"></script>
+    <script src="src/JT_VBObox0.js" type="text/javascript"></script>
+    <script src="src/JT_VBObox1.js" type="text/javascript"></script>
     <script src="src/VBOinfo.js" type="text/javascript"></script>
-    <script src="src/htmlcallBacks.js" type="text/javascript"></script>
+    <script src="src/GUI.js" type="text/javascript"></script>
     <script src="src/main.js" type="text/javascript"></script>
 
 </body>
