add cylinder and sphere to the left scene

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     <script src="src/CCamera.js" type="text/javascript"></script>
     <script src="src/CGeom.js" type="text/javascript"></script>
     <script src="src/CImgBuf.js" type="text/javascript"></script>
+    <script src="src/CHit.js" type="text/javascript"></script>
     <script src="src/CRay.js" type="text/javascript"></script>
     <script src="src/CScene.js" type="text/javascript"></script>
     <script src="src/JT_VBObox0.js" type="text/javascript"></script>
