--- a/index.html
+++ b/index.html
@@ -39,10 +39,14 @@
         <div id='MouseCanvas'> MouseCanvas... </div>
     </p>
 
+    <script src="mat/materials_Ayerdi.js" type="text/javascript"></script>
+    <script src="mat/lights-JT.js" type="text/javascript"></script>
+
     <script src="lib/glmatrix.js"></script>
     <script src="lib/webgl-utils.js"></script>
     <script src="lib/webgl-debug.js"></script>
     <script src="lib/cuon-utils.js"></script>
+    <script src="lib/cuon-matrix-quat.js" type="text/javascript"></script>
 
     <script src="src/CCamera.js" type="text/javascript"></script>
     <script src="src/CGeom.js" type="text/javascript"></script>
