--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     <script src="lib/webgl-debug.js"></script>
     <script src="lib/cuon-utils.js"></script>
     <script src="lib/cuon-matrix-quat.js" type="text/javascript"></script>
+    <script src="lib/dat-gui.js" type="text/javascript"></script>
 
     <script src="src/CCamera.js" type="text/javascript"></script>
     <script src="src/CGeom.js" type="text/javascript"></script>
