--- a/index.html
+++ b/index.html
@@ -21,6 +21,16 @@
     <button type="button" onclick="onSceneButton()">Change Scene</button>
     <button type="button" onclick="lightOn(1)" id="light1">Turn Light 1 Off</button>
     <button type="button" onclick="lightOn(2)" id="light2">Turn Light 1 Off</button>
+    <span>Recursion Depth: </span><select name="depth" id="depth" onchange="setRecursionDepth(this)">
+        <option value="1" selected="selected">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5</option>
+        <option value="6">6</option>
+        <option value="7">7</option>
+        <option value="8">8</option>
+    </select>
     <span id='SceneReport'> Show Scene Number 0 </span>
 
     <br>
