--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
     <script src="lib/webgl-debug.js"></script>
     <script src="lib/cuon-utils.js"></script>
     <script src="lib/cuon-matrix-quat.js" type="text/javascript"></script>
+    <script src="lib/cuon-matrix-quat03.js" type="text/javascript"></script>
     <script src="lib/dat-gui.js" type="text/javascript"></script>
 
     <script src="src/CCamera.js" type="text/javascript"></script>
@@ -72,6 +73,7 @@
     <script src="src/JT_VBObox1.js" type="text/javascript"></script>
     <script src="src/VBOinfo.js" type="text/javascript"></script>
     <script src="src/GUI.js" type="text/javascript"></script>
+     <script src="src/initVBOwithShaders.js" type="text/javascript"></script>
     <script src="src/main.js" type="text/javascript"></script>
 
 </body>
