--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
     <button type="button" onclick="onSuperSampleButton()">Super-Sampling</button>
     <button type="button" onclick="onJitterButton()">Jitter</button>
     <span id='AAreport'> 1 sample/pixel. No jitter. </span>
+     <span>Shadow Type: </span><select name="shadow" id="shadow" onchange="setShadowType(this)">
+        <option value="0" selected="selected">1</option>
+        <option value="1">2</option>
+        <option value="2">3</option>
+    </select>
     <br>
     <button type="button" onclick="onSceneButton()">Change Scene</button>
     <button type="button" onclick="lightOn(1)" id="light1">Turn Light 1 Off</button>
