--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         Please use a browser that supports "canvas"
     </canvas>
     <br>
-    <b>Ray Tracer: Press 't' to Trace!</b> (left: WebGL Scene Preview. Right: Ray-Traced Result.)
+    <b>Ray Tracer: Press 't' to Trace!</b> (Left: WebGL Scene Preview. Right: Ray-Traced Result.)
+    <i>May take a few seconds to render after pressing the buttons</i>
     <br>
     <button type="button" onclick="onSuperSampleButton()">Super-Sampling</button>
     <button type="button" onclick="onJitterButton()">Jitter</button>
