--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
         <option value="1">2</option>
         <option value="2">3</option>
     </select>
+    <span>3D procedural material: </span><select name="pmat" id="pmat" onchange="setPMat(this)">
+        <option value="0" selected="selected">None</option>
+        <option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+    </select>
     <br>
     <button type="button" onclick="onSceneButton()">Change Scene</button>
     <button type="button" onclick="lightOn(1)" id="light1">Turn Light 1 Off</button>
